fix(hero-map): fix hero map not showing

--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -348,7 +348,7 @@ body > div:first-of-type > div:first-of-type {
 .view-container {
   position: absolute;
   left: 0px;
-  height: 100%;
+  height: 93%;
   width: 100%;
 }
 
@@ -376,7 +376,7 @@ body > div:first-of-type > div:first-of-type {
 .col-map {
   padding-right: 15px;
   width: 65%;
-  height: 95%;
+  height: 100%;
   float: right;
 }
 #map {
@@ -387,7 +387,7 @@ body > div:first-of-type > div:first-of-type {
   #map {
     display: block;
     width: 100%;
-    height: 95%;
+    height: 100%;
   }
 }
 
